# llm-swrpg

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  config.py  llm-swrpg.code-workspace  llm.py  main.py  populate_database.py  pyproject.toml  query_chat.py  rag.py  railway.toml  retrieval.py  server.py
chroma/4783b8fd-501b-4340-bea6-46a4cfc168f1/: index_metadata.pickle
guidance/: guidance.md
static/: admin.html  index.html
tests/: test_config.py  test_llm.py  test_rag.py  test_retrieval.py  test_server.py
